comment section built and added to collection and item pages... ready for comment database build

--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    <div class="containerSimple bg-slate-200">
+    <div class="bg-white pb-4 h-full overflow-y-auto">
       <div class="collectionHeader bg-slate-100">
         <span class="text-sm font-semibold text-slate-600">Create Collection</span>
       </div>
