--- a/src/main/resources/templates/createItem.html
+++ b/src/main/resources/templates/createItem.html
@@ -112,6 +112,7 @@
               name="description"
               placeholder="Description"
               rows="6"
+              maxlength="255"
             ></textarea>
           </div>
         </div>
