--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -122,37 +122,197 @@
           </div>
         </div>
       </div>
-      <div id="commentBox" class="hidden w-full bg-red-500 overflow-y-auto">
-        <div class="p-4">
-          <p>Comment 1</p>
-          <p>Comment 2</p>
-          <p>Comment 3</p>
-          <p>Comment 4</p>
-          <p>Comment 5</p>
-          <p>Comment 6</p>
-          <p>Comment 1</p>
-          <p>Comment 2</p>
-          <p>Comment 3</p>
-          <p>Comment 4</p>
-          <p>Comment 5</p>
-          <p>Comment 6</p>
-          <p>Comment 1</p>
-          <p>Comment 2</p>
-          <p>Comment 3</p>
-          <p>Comment 4</p>
-          <p>Comment 5</p>
-          <p>Comment 6</p>
-          <p>Comment 1</p>
-          <p>Comment 2</p>
-          <p>Comment 3</p>
-          <p>Comment 4</p>
-          <p>Comment 5</p>
-          <p>Comment 6</p>
+
+      <!-- Comment Box -->
+      <div
+        id="commentBox"
+        class="hidden w-full bg-slate-50 overflow-y-auto py-3"
+      >
+        <!-- Comment Template -->
+        <div class="px-3">
+          <div
+            class="w-full h-auto flex flex-row justify-start items-start text-sm"
+          >
+            <!-- Profile Picture -->
+            <div id="imageBoxComment" class="flex-shrink-0 w-10">
+              <a href="/profile">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+            </div>
+
+            <!-- Content Box -->
+            <div
+              id="contentBoxComment"
+              class="flex flex-col items-start w-full"
+            >
+              <div class="flex flex-row justify-start items-start w-full">
+                <!-- Profile Link -->
+                <div class="flex items-start">
+                  <a href="/profile" class="flex items-start">
+                    <span
+                      style="font-size: 10px; line-height: 1"
+                      class="font-semibold leading-[1]"
+                      th:if="${user?.username != null}"
+                      th:text="${user?.username}"
+                    ></span>
+                  </a>
+                </div>
+
+                <!-- Time Container -->
+                <div class="pl-2 flex items-end">
+                  <span
+                    style="font-size: 8px; line-height: 1"
+                    class="font-thin leading-[1]"
+                  >
+                    6h
+                  </span>
+                </div>
+              </div>
+
+
+              <div class="flex flex-row justify-start items-start">
+                <span
+                  class="font-light truncate-multiline"
+                  onclick="toggleTruncate(this)"
+                  th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                ></span>
+              </div>
+
+
+              <div
+                style="font-size: 8px; line-height: 1"
+                class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+              >
+                <a id="replyButton" class="cursor-pointer">
+                  <span class="leading-[1.2]">Reply</span>
+                </a>
+              </div>
+
+              <!-- Reply Box -->
+              <div id="replyDiv" class="w-full">
+                <!-- Reply Template -->
+                <div id="replyTemplate" class="py-1 w-full">
+                  <div
+                    class="w-full h-auto flex flex-row justify-start items-start text-sm py-2"
+                  >
+                    <!-- Profile Picture -->
+                    <div id="imageBoxComment" class="flex-shrink-0 w-10">
+                      <a href="/profile">
+                        <img
+                          class="h-7 w-7 rounded-full bg-white"
+                          th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                          alt="Profile Picture"
+                        />
+                      </a>
+                    </div>
+
+                    <!-- Content Box -->
+                    <div
+                      id="contentBoxComment"
+                      class="flex flex-col items-start w-full"
+                    >
+                      <div
+                        class="flex flex-row justify-start items-start w-full"
+                      >
+                        <!-- Profile Link -->
+                        <div class="flex items-start">
+                          <a href="/profile" class="flex items-start">
+                            <span
+                              style="font-size: 10px; line-height: 1"
+                              class="font-semibold leading-[1]"
+                              th:if="${user?.username != null}"
+                              th:text="${user?.username}"
+                            ></span>
+                          </a>
+                        </div>
+
+                        <!-- Time Container -->
+                        <div class="pl-2 flex items-end">
+                          <span
+                            style="font-size: 8px; line-height: 1"
+                            class="font-thin leading-[1]"
+                          >
+                            6h
+                          </span>
+                        </div>
+                      </div>
+
+
+                      <div class="flex flex-row justify-start items-start">
+                        <span
+                          class="font-light truncate-multiline"
+                          onclick="toggleTruncate(this)"
+                          th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                        ></span>
+                      </div>
+
+
+                      <div
+                        style="font-size: 8px; line-height: 1"
+                        class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+                      >
+                        <span class="leading-[1.2]">Reply</span>
+                      </div>
+                    </div>
+
+                    <!-- Like Box -->
+                    <div
+                      id="likeBox"
+                      class="flex flex-col justify-start items-center pr-2"
+                    >
+                      <div class="flex flex-row justify-center items-center">
+                        <a>
+                          <span
+                            style="font-size: 10px; line-height: 1"
+                            class="font-medium text-xs"
+                          >
+                            &#9825;
+                          </span>
+                        </a>
+                      </div>
+                      <div class="flex flex-row justify-center items-center">
+                        <p
+                          style="font-size: 10px; line-height: 1"
+                          class="font-thin text-xs"
+                        >
+                          0
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Like Box -->
+            <div id="likeBox" class="flex flex-col justify-start items-center">
+              <div class="flex flex-row justify-center items-center">
+                <a>
+                  <span
+                    style="font-size: 10px; line-height: 1"
+                    class="font-medium text-xs"
+                  >
+                    &#9825;
+                  </span>
+                </a>
+              </div>
+              <div class="flex flex-row justify-center items-center">
+                <p
+                  style="font-size: 10px; line-height: 1"
+                  class="font-thin text-xs"
+                >
+                  0
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-
 
     <div id="itemGrid" class="w-full min-h-fit overflow-hidden ">
       <div class="grid">
@@ -170,52 +330,76 @@
       </div>
     </div>
 
-
-
-
-    </div>
+  </div>
 
 
 
 
 
 
-    <footer class="">
-    <div class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center">
-      <div class="footerNav">
-        <ul class="flex justify-between items-center w-full">
-          <li>
-            <div class="h-4 w-4 flex items-center justify-center">
-              <a class="text-2xl font-bold" href="/index">
-                &#8962;
+    <footer>
+      <div
+        class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
+      >
+        <div id="footerNavContent" class="footerNav">
+          <ul class="flex justify-between items-center w-full">
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/index">&#8962;</a>
+              </div>
+            </li>
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a
+                  class="text-2xl font-bold"
+                  th:href="@{/create-item/{collectionId}(collectionId=${collection.id})}"
+                >
+                  &#43;
+                </a>
+              </div>
+            </li>
+            <li>
+              <a href="/profile">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
               </a>
-            </div>
-          </li>
-          <li>
-            <div class="h-4 w-4 flex items-center justify-center">
-              <a
-                class="text-2xl font-bold"
-                th:href="@{/create-item/{collectionId}(collectionId=${collection.id})}"
-                >&#43;
+            </li>
+          </ul>
+        </div>
+
+        <div id="commentActivity" class="commentNav hidden">
+          <div id="commentInputContainer" class="w-full">
+            <form
+              class="flex flex-row w-full items-center justify-center px-2 bg-white"
+            >
+              <a href="/profile" class="w-10">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
               </a>
-            </div>
-          </li>
-          <li>
-            <a href="/profile">
-              <img
-                class="h-7 w-7 rounded-full bg-white"
-                th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
-                alt="Profile Picture"
+              <input
+                type="text"
+                name="comment"
+                placeholder="Leave a comment..."
+                class="w-full border-none outline-none focus:ring-0 text-sm font-thin bg-slate-100 rounded-md px-2 py-1 mx-2"
               />
-            </a>
-          </li>
-        </ul>
+              <div
+                class="text-sm bg-blue-500 text-white font-semibold text-center h-full w-7"
+              >
+                <a href="#" id="triggerUpload">
+                  <span>C</span>
+                </a>
+              </div>
+              <button type="submit" hidden class="">Submit</button>
+            </form>
+          </div>
+        </div>
       </div>
-    </div>
     </footer>
-
-
-
-
   </body>
 </html>
