--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,8 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="/js/toggleTruncate.js" defer></script>
+    <script src="/js/toggleCommentBoxIndex.js" defer></script>
     <link rel="stylesheet" href="/css/output.css" />
   </head>
   <body>
@@ -40,35 +42,313 @@
         </ul>
       </nav>
     </header>
-    <div class="container bg-slate-200">
-      <div class="card">
-        <div class="headerBox">
-          <h4 class="formHeader">This will be the collection feed...</h4>
-          <div class="flex justify-center items-center">
-            <a
-              href="/create-collection"
-              class="deleteButton bg-slate-400 hover:bg-slate-400"
-            >
-              Create A Collection
+    <div class="overflow-auto w-full bg-slate-200">
+      <div th:if="${collections != null}">
+        <div class="flex flex-col items-center justify-center w-full bg-white">
+          <div th:each="collection : ${collections}" class="collectionContainer">
+
+            <div class="collectionNavbar shadow-sm">
+              <div class="flex justify-between items-center w-full">
+                <div>
+                  <ul class="flex justify-start items-center w-full">
+                    <li class="pr-2">
+                      <a href="/profile">
+                        <img
+                        class="h-7 w-7 rounded-full bg-white"
+                        th:src="${users[collection.userId].profilePictureUrl != null ? users[collection.userId].profilePictureUrl : '/images/default-profile-photo.png'}"
+                        th:alt="${users[collection.userId].username}"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/profile">
+                        <span
+                        class="text-sm font-semibold"
+                        th:if="${users[collection.userId].username != null}"
+                        th:text="${users[collection.userId].username}"
+                        ></span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div>
+                  <h2
+                  class="text-sm font-semibold"
+                  th:text="${collection.title}"
+                ></h2>
+                </div>
+              </div>
+            </div>
+            <a th:href="@{/collection/{id}(id=${collection.id})}">
+              <img
+                th:src="${collection.imageUrl}"
+                alt="Collection Cover"
+                class="w-full object-cover aspect-square"
+              />
             </a>
+            <div class="w-full px-2">
+              <div class="flex flex-row w-full h-auto py-1 text-sm">
+                <ul class="flex flex-row justify-start items-center pr-2">
+                  <li class="flex flex-row justify-start items-center pr-2">
+                    <a>
+                      <span class="pr-2 font-medium">&#9825;</span>
+                    </a>
+                    <p class="font-thin">0</p>
+                  </li>
+                  <li class="flex flex-row justify-start items-center pr-2">
+                    <a class="commentToggle cursor-pointer" th:attr="data-collection-id=${collection.id}">
+                      <span class="pr-2 font-medium">comment</span>
+                    </a>
+                  
+                    <p class="font-thin">0</p>
+                  </li>
+                </ul>
+              </div>
+  
+              <div class="w-full h-auto flex justify-start items-center text-sm">
+                <!-- CAPTION -->
+                <p
+                  id="toggle_truncate"
+                  class="truncate-multiline leading-[1rem]"
+                  onclick="toggleTruncate(this)"
+                >
+                  <a href="/profile">
+                    <span
+                      class="font-semibold"
+                      th:if="${user?.username != null}"
+                      th:text="${user?.username}"
+                    ></span>
+                  </a>
+                  <span
+                    th:if="${collection?.caption != null}"
+                    th:text="${collection?.caption}"
+                  ></span>
+                </p>
+              </div>
+  
+              <div class="w-full flex justify-between items-center py-1">
+                <!-- MONTH YEAR -->
+                <div class="w-full flex flex-col justify-center items-start pt-1">
+                  <span
+                    style="font-size: 9px"
+                    class="font-extralight"
+                    th:if="${collection?.updatedAt != null}"
+                    th:text="${#dates.format(collection?.updatedAt, 'MMMM-YYYY')}"
+                  ></span>
+                </div>
+              </div>
+            </div>
+
+  
+            <!-- Comment Box -->
+            <div class="commentBox hidden" th:attr="data-collection-id=${collection.id}">
+              <!-- Comment Template -->
+              <div class="px-3">
+                <div
+                  class="w-full h-auto flex flex-row justify-start items-start text-sm"
+                >
+                  <!-- Profile Picture -->
+                  <div id="imageBoxComment" class="flex-shrink-0 w-10">
+                    <a href="/profile">
+                      <img
+                        class="h-7 w-7 rounded-full bg-white"
+                        th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                        alt="Profile Picture"
+                      />
+                    </a>
+                  </div>
+    
+                  <!-- Content Box -->
+                  <div
+                    id="contentBoxComment"
+                    class="flex flex-col items-start w-full"
+                  >
+                    <div class="flex flex-row justify-start items-start w-full">
+                      <!-- Profile Link -->
+                      <div class="flex items-start">
+                        <a href="/profile" class="flex items-start">
+                          <span
+                            style="font-size: 10px; line-height: 1"
+                            class="font-semibold leading-[1]"
+                            th:if="${user?.username != null}"
+                            th:text="${user?.username}"
+                          ></span>
+                        </a>
+                      </div>
+    
+                      <!-- Time Container -->
+                      <div class="pl-2 flex items-end">
+                        <span
+                          style="font-size: 8px; line-height: 1"
+                          class="font-thin leading-[1]"
+                        >
+                          6h
+                        </span>
+                      </div>
+                    </div>
+    
+                    <div class="flex flex-row justify-start items-start">
+                      <span
+                        class="font-light truncate-multiline"
+                        onclick="toggleTruncate(this)"
+                        th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                      ></span>
+                    </div>
+    
+                    <div
+                      style="font-size: 8px; line-height: 1"
+                      class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+                    >
+                      <a id="replyButton" class="cursor-pointer">
+                        <span class="leading-[1.2]">Reply</span>
+                      </a>
+                    </div>
+    
+                    <!-- Reply Box -->
+                    <div id="replyDiv" class="w-full">
+                      <!-- Reply Template -->
+                      <div id="replyTemplate" class="py-1 w-full">
+                        <div
+                          class="w-full h-auto flex flex-row justify-start items-start text-sm py-2"
+                        >
+                          <!-- Profile Picture -->
+                          <div id="imageBoxComment" class="flex-shrink-0 w-10">
+                            <a href="/profile">
+                              <img
+                                class="h-7 w-7 rounded-full bg-white"
+                                th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                                alt="Profile Picture"
+                              />
+                            </a>
+                          </div>
+    
+                          <!-- Content Box -->
+                          <div
+                            id="contentBoxComment"
+                            class="flex flex-col items-start w-full"
+                          >
+                            <div
+                              class="flex flex-row justify-start items-start w-full"
+                            >
+                              <!-- Profile Link -->
+                              <div class="flex items-start">
+                                <a href="/profile" class="flex items-start">
+                                  <span
+                                    style="font-size: 10px; line-height: 1"
+                                    class="font-semibold leading-[1]"
+                                    th:if="${user?.username != null}"
+                                    th:text="${user?.username}"
+                                  ></span>
+                                </a>
+                              </div>
+    
+                              <!-- Time Container -->
+                              <div class="pl-2 flex items-end">
+                                <span
+                                  style="font-size: 8px; line-height: 1"
+                                  class="font-thin leading-[1]"
+                                >
+                                  6h
+                                </span>
+                              </div>
+                            </div>
+    
+                            <div class="flex flex-row justify-start items-start">
+                              <span
+                                class="font-light truncate-multiline"
+                                onclick="toggleTruncate(this)"
+                                th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                              ></span>
+                            </div>
+    
+                            <div
+                              style="font-size: 8px; line-height: 1"
+                              class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+                            >
+                              <span class="leading-[1.2]">Reply</span>
+                            </div>
+                          </div>
+    
+                          <!-- Like Box -->
+                          <div
+                            id="likeBox"
+                            class="flex flex-col justify-start items-center pr-2"
+                          >
+                            <div class="flex flex-row justify-center items-center">
+                              <a>
+                                <span
+                                  style="font-size: 10px; line-height: 1"
+                                  class="font-medium text-xs"
+                                >
+                                  &#9825;
+                                </span>
+                              </a>
+                            </div>
+                            <div class="flex flex-row justify-center items-center">
+                              <p
+                                style="font-size: 10px; line-height: 1"
+                                class="font-thin text-xs"
+                              >
+                                0
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+                  <!-- Like Box -->
+                  <div
+                    id="likeBox"
+                    class="flex flex-col justify-start items-center"
+                  >
+                    <div class="flex flex-row justify-center items-center">
+                      <a>
+                        <span
+                          style="font-size: 10px; line-height: 1"
+                          class="font-medium text-xs"
+                        >
+                          &#9825;
+                        </span>
+                      </a>
+                    </div>
+                    <div class="flex flex-row justify-center items-center">
+                      <p
+                        style="font-size: 10px; line-height: 1"
+                        class="font-thin text-xs"
+                      >
+                        0
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+
+
+          
         </div>
       </div>
     </div>
     <footer>
-      <div class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center">
-        <div class="footerNav">
+      <div
+        class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
+      >
+        <div id="footerNavContent" class="footerNav">
           <ul class="flex justify-between items-center w-full">
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/index">
-                  &#8962;
-                </a>
+                <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/create-collection">
+                <a
+                  class="text-2xl font-bold"
+                  href="/create-collection"
+                >
                   &#43;
                 </a>
               </div>
@@ -83,6 +363,36 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div id="commentActivity" class="commentNav hidden">
+          <div id="commentInputContainer" class="w-full">
+            <form
+              class="flex flex-row w-full items-center justify-center px-2 bg-white"
+            >
+              <a href="/profile" class="w-10">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+              <input
+                type="text"
+                name="comment"
+                placeholder="Leave a comment..."
+                class="w-full border-none outline-none focus:ring-0 text-sm font-thin bg-slate-100 rounded-md px-2 py-1 mx-2"
+              />
+              <div
+                class="text-sm bg-blue-500 text-white font-semibold text-center h-full w-7"
+              >
+                <a href="#" id="triggerUpload">
+                  <span>C</span>
+                </a>
+              </div>
+              <button type="submit" hidden class="">Submit</button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
