--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
     <script src="/js/toggleCommentBoxIndex.js" defer></script>
     <link rel="stylesheet" href="/css/output.css" />
   </head>
-  <body>
+  <body id="indexPage">
     <header>
       <nav class="navbar">
         <ul class="flex justify-between items-center w-full">
@@ -328,7 +328,7 @@
           </div>
 
 
-          
+
         </div>
       </div>
     </div>
