--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -35,6 +35,10 @@
     @apply py-12 overflow-auto;
   }
 
+  body#createItemPage{
+    @apply py-12 overflow-auto;
+  }
+
   body {
   @apply py-12 overflow-hidden;
   }
