items ui on index page and enhanced comment box ui on collections and items

--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -30,12 +30,8 @@
     background-color: white; /* Optional: Set a background color */
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visibility */
   }
-  
-  body#indexPage{
-    @apply py-12 overflow-auto;
-  }
 
-  body#createItemPage{
+  body#scrollablePage{
     @apply py-12 overflow-auto;
   }
 
