--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -144,7 +144,7 @@
           >
         </div>
       </div>
-      <div class="w-full min-h-fit overflow-hidden">
+      <div class="w-full min-h-fit overflow-y-auto">
         <div class="grid">
           <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3 border-0">
             <div th:each="collection : ${row}" class="flex flex-col items-center">
