--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -8,7 +8,7 @@
     <script src="/js/toggleTruncate.js" defer></script>
     <script src="/js/toggleCommentBox.js" defer></script>
   </head>
-  <body>
+  <body id="scrollablePage">
     <header>
       <nav class="navbar">
         <ul class="flex justify-between w-full">
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <div class="profileContainerScroll overflow-hidden bg-slate-200">
+    <div class="profileContainerScroll overflow-y-auto bg-slate-200 h-full">
       <div class="h-auto w-full border-b-2 bg-slate-100 shadow-sm">
         <div class="collectionNavbar shadow-sm">
           <div class="flex justify-between items-center w-full">
@@ -123,7 +123,7 @@
         <!-- Comment Box -->
         <div
           th:if="${collection?.id != null}"
-          th:class="'hidden w-full bg-slate-50 overflow-y-auto py-3 ' + (commentBox + collection.id)"
+          class="hidden w-full bg-slate-50 py-3 overflow-y-auto pb-24"
           th:value="${collection.id}"
           id="commentBox"
         >
@@ -309,10 +309,379 @@
               </div>
             </div>
           </div>
+          <!-- Comment Template -->
+          <div class="px-3">
+            <div
+              class="w-full h-auto flex flex-row justify-start items-start text-sm"
+            >
+              <!-- Profile Picture -->
+              <div id="imageBoxComment" class="flex-shrink-0 w-10">
+                <a href="/profile">
+                  <img
+                    class="h-7 w-7 rounded-full bg-white"
+                    th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                    alt="Profile Picture"
+                  />
+                </a>
+              </div>
+
+              <!-- Content Box -->
+              <div
+                id="contentBoxComment"
+                class="flex flex-col items-start w-full"
+              >
+                <div class="flex flex-row justify-start items-start w-full">
+                  <!-- Profile Link -->
+                  <div class="flex items-start">
+                    <a href="/profile" class="flex items-start">
+                      <span
+                        style="font-size: 10px; line-height: 1"
+                        class="font-semibold leading-[1]"
+                        th:if="${user?.username != null}"
+                        th:text="${user?.username}"
+                      ></span>
+                    </a>
+                  </div>
+
+                  <!-- Time Container -->
+                  <div class="pl-2 flex items-end">
+                    <span
+                      style="font-size: 8px; line-height: 1"
+                      class="font-thin leading-[1]"
+                    >
+                      6h
+                    </span>
+                  </div>
+                </div>
+
+                <div class="flex flex-row justify-start items-start">
+                  <span
+                    class="font-light truncate-multiline"
+                    onclick="toggleTruncate(this)"
+                    th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                  ></span>
+                </div>
+
+                <div
+                  style="font-size: 8px; line-height: 1"
+                  class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+                >
+                  <a id="replyButton" class="cursor-pointer">
+                    <span class="leading-[1.2]">Reply</span>
+                  </a>
+                </div>
+
+                <!-- Reply Box -->
+                <div id="replyDiv" class="w-full">
+                  <!-- Reply Template -->
+                  <div id="replyTemplate" class="py-1 w-full">
+                    <div
+                      class="w-full h-auto flex flex-row justify-start items-start text-sm py-2"
+                    >
+                      <!-- Profile Picture -->
+                      <div id="imageBoxComment" class="flex-shrink-0 w-10">
+                        <a href="/profile">
+                          <img
+                            class="h-7 w-7 rounded-full bg-white"
+                            th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                            alt="Profile Picture"
+                          />
+                        </a>
+                      </div>
+
+                      <!-- Content Box -->
+                      <div
+                        id="contentBoxComment"
+                        class="flex flex-col items-start w-full"
+                      >
+                        <div
+                          class="flex flex-row justify-start items-start w-full"
+                        >
+                          <!-- Profile Link -->
+                          <div class="flex items-start">
+                            <a href="/profile" class="flex items-start">
+                              <span
+                                style="font-size: 10px; line-height: 1"
+                                class="font-semibold leading-[1]"
+                                th:if="${user?.username != null}"
+                                th:text="${user?.username}"
+                              ></span>
+                            </a>
+                          </div>
+
+                          <!-- Time Container -->
+                          <div class="pl-2 flex items-end">
+                            <span
+                              style="font-size: 8px; line-height: 1"
+                              class="font-thin leading-[1]"
+                            >
+                              6h
+                            </span>
+                          </div>
+                        </div>
+
+                        <div class="flex flex-row justify-start items-start">
+                          <span
+                            class="font-light truncate-multiline"
+                            onclick="toggleTruncate(this)"
+                            th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                          ></span>
+                        </div>
+
+                        <div
+                          style="font-size: 8px; line-height: 1"
+                          class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+                        >
+                          <span class="leading-[1.2]">Reply</span>
+                        </div>
+                      </div>
+
+                      <!-- Like Box -->
+                      <div
+                        id="likeBox"
+                        class="flex flex-col justify-start items-center pr-2"
+                      >
+                        <div class="flex flex-row justify-center items-center">
+                          <a>
+                            <span
+                              style="font-size: 10px; line-height: 1"
+                              class="font-medium text-xs"
+                            >
+                              &#9825;
+                            </span>
+                          </a>
+                        </div>
+                        <div class="flex flex-row justify-center items-center">
+                          <p
+                            style="font-size: 10px; line-height: 1"
+                            class="font-thin text-xs"
+                          >
+                            0
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Like Box -->
+              <div
+                id="likeBox"
+                class="flex flex-col justify-start items-center"
+              >
+                <div class="flex flex-row justify-center items-center">
+                  <a>
+                    <span
+                      style="font-size: 10px; line-height: 1"
+                      class="font-medium text-xs"
+                    >
+                      &#9825;
+                    </span>
+                  </a>
+                </div>
+                <div class="flex flex-row justify-center items-center">
+                  <p
+                    style="font-size: 10px; line-height: 1"
+                    class="font-thin text-xs"
+                  >
+                    0
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Comment Template -->
+          <div class="px-3">
+            <div
+              class="w-full h-auto flex flex-row justify-start items-start text-sm"
+            >
+              <!-- Profile Picture -->
+              <div id="imageBoxComment" class="flex-shrink-0 w-10">
+                <a href="/profile">
+                  <img
+                    class="h-7 w-7 rounded-full bg-white"
+                    th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                    alt="Profile Picture"
+                  />
+                </a>
+              </div>
+
+              <!-- Content Box -->
+              <div
+                id="contentBoxComment"
+                class="flex flex-col items-start w-full"
+              >
+                <div class="flex flex-row justify-start items-start w-full">
+                  <!-- Profile Link -->
+                  <div class="flex items-start">
+                    <a href="/profile" class="flex items-start">
+                      <span
+                        style="font-size: 10px; line-height: 1"
+                        class="font-semibold leading-[1]"
+                        th:if="${user?.username != null}"
+                        th:text="${user?.username}"
+                      ></span>
+                    </a>
+                  </div>
+
+                  <!-- Time Container -->
+                  <div class="pl-2 flex items-end">
+                    <span
+                      style="font-size: 8px; line-height: 1"
+                      class="font-thin leading-[1]"
+                    >
+                      6h
+                    </span>
+                  </div>
+                </div>
+
+                <div class="flex flex-row justify-start items-start">
+                  <span
+                    class="font-light truncate-multiline"
+                    onclick="toggleTruncate(this)"
+                    th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                  ></span>
+                </div>
+
+                <div
+                  style="font-size: 8px; line-height: 1"
+                  class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+                >
+                  <a id="replyButton" class="cursor-pointer">
+                    <span class="leading-[1.2]">Reply</span>
+                  </a>
+                </div>
+
+                <!-- Reply Box -->
+                <div id="replyDiv" class="w-full">
+                  <!-- Reply Template -->
+                  <div id="replyTemplate" class="py-1 w-full">
+                    <div
+                      class="w-full h-auto flex flex-row justify-start items-start text-sm py-2"
+                    >
+                      <!-- Profile Picture -->
+                      <div id="imageBoxComment" class="flex-shrink-0 w-10">
+                        <a href="/profile">
+                          <img
+                            class="h-7 w-7 rounded-full bg-white"
+                            th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                            alt="Profile Picture"
+                          />
+                        </a>
+                      </div>
+
+                      <!-- Content Box -->
+                      <div
+                        id="contentBoxComment"
+                        class="flex flex-col items-start w-full"
+                      >
+                        <div
+                          class="flex flex-row justify-start items-start w-full"
+                        >
+                          <!-- Profile Link -->
+                          <div class="flex items-start">
+                            <a href="/profile" class="flex items-start">
+                              <span
+                                style="font-size: 10px; line-height: 1"
+                                class="font-semibold leading-[1]"
+                                th:if="${user?.username != null}"
+                                th:text="${user?.username}"
+                              ></span>
+                            </a>
+                          </div>
+
+                          <!-- Time Container -->
+                          <div class="pl-2 flex items-end">
+                            <span
+                              style="font-size: 8px; line-height: 1"
+                              class="font-thin leading-[1]"
+                            >
+                              6h
+                            </span>
+                          </div>
+                        </div>
+
+                        <div class="flex flex-row justify-start items-start">
+                          <span
+                            class="font-light truncate-multiline"
+                            onclick="toggleTruncate(this)"
+                            th:text="'This is a placeholder text for the comment content. We are unsure exactly how long it needs to be to invoke the truncate feature.'"
+                          ></span>
+                        </div>
+
+                        <div
+                          style="font-size: 8px; line-height: 1"
+                          class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+                        >
+                          <span class="leading-[1.2]">Reply</span>
+                        </div>
+                      </div>
+
+                      <!-- Like Box -->
+                      <div
+                        id="likeBox"
+                        class="flex flex-col justify-start items-center pr-2"
+                      >
+                        <div class="flex flex-row justify-center items-center">
+                          <a>
+                            <span
+                              style="font-size: 10px; line-height: 1"
+                              class="font-medium text-xs"
+                            >
+                              &#9825;
+                            </span>
+                          </a>
+                        </div>
+                        <div class="flex flex-row justify-center items-center">
+                          <p
+                            style="font-size: 10px; line-height: 1"
+                            class="font-thin text-xs"
+                          >
+                            0
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Like Box -->
+              <div
+                id="likeBox"
+                class="flex flex-col justify-start items-center"
+              >
+                <div class="flex flex-row justify-center items-center">
+                  <a>
+                    <span
+                      style="font-size: 10px; line-height: 1"
+                      class="font-medium text-xs"
+                    >
+                      &#9825;
+                    </span>
+                  </a>
+                </div>
+                <div class="flex flex-row justify-center items-center">
+                  <p
+                    style="font-size: 10px; line-height: 1"
+                    class="font-thin text-xs"
+                  >
+                    0
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
         </div>
       </div>
 
-      <div id="itemGrid" class="w-full min-h-fit overflow-hidden">
+      <div id="itemGrid" class="w-full min-h-fit">
         <div class="grid">
           <div th:each="row : ${partitionedItems}" class="grid grid-cols-3">
             <div th:each="item : ${row}" class="flex flex-col items-center">
