--- a/src/main/resources/templates/createItem.html
+++ b/src/main/resources/templates/createItem.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="/css/output.css" />
   </head>
-  <body id="createItemPage">
+  <body id="scrollablePage">
     <header>
       <nav class="navbar">
         <ul class="flex justify-between items-center w-full">
@@ -69,7 +69,7 @@
       
       <div class="scrollable-container h-100vh">
         <form
-        class="flex flex-col w-full items-center justify-center"
+        class="flex flex-col w-full items-center justify-center px-2"
         th:action="@{/create_item/{collectionId}(collectionId=${collectionId})}"
         method="post"
         enctype="multipart/form-data"
