--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -124,6 +124,22 @@
             </div>
           </div>
         </form>
+        <form
+        class="flex flex-col w-full items-center justify-center px-2 bg-white"
+        th:action="@{/delete-collection/{id}(id=${collection.id})}"
+        method="post"
+      >
+        <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+        <div class="flex flex-row justify-center items-center">
+        <button
+          class="deleteButton bg-red-600 hover:bg-red-800"
+          type="submit"
+          onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
+        >
+          Delete Collection
+        </button>
+      </div>
+      </form>
       </div>
     </div>
   </body>
