--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -149,7 +149,23 @@
           </button>
         </div>
       </form>
-
+      <form
+        class="flex flex-col w-full items-center justify-center px-2 bg-white"
+        th:action="@{/delete-item/{id}(id=${item.id})}"
+        method="post"
+        enctype="multipart/form-data"
+      >
+        <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+        <div class="flex flex-row justify-center items-center">
+          <button
+            class="deleteButton bg-red-600 hover:bg-red-800"
+            type="submit"
+            onclick="return confirm('Are you sure you want to delete this item? This action cannot be undone.');"
+          >
+            Delete Item
+          </button>
+        </div>
+      </form>
     </div>
     </div>
   </body>
